--- a/contact-form/styles.css
+++ b/contact-form/styles.css
@@ -7,10 +7,15 @@ input{
 }
 .formElem{
     padding: 5px;
+    display: flex;
+    flex-direction: column;
 }
 #contact-form{
     padding: 25px;
 }
 button{
     margin-top: 25px;
+}
+.error{
+    font-size: 12px;
 }
