--- a/stopwatch/styles.css
+++ b/stopwatch/styles.css
@@ -6,3 +6,11 @@
     height: 100vh;
     width: 100vw;
 }
+input{
+    border: 1px solid black;
+}
+.formElem{
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+}
