--- a/custom-dropdown/styles.css
+++ b/custom-dropdown/styles.css
@@ -1,16 +1,38 @@
-*{
+* {
     margin: 0;
     padding: 5px;
-}
-#main-div{
     background-color: whitesmoke;
-    height: 100vh;
-    width: 100vw;
 }
-#selected-option{
+
+#main-div {
+    height: 100vh;
+    width: 35vw;
+}
+
+#selected-option {
     font-size: 18px;
     padding: 20px;
 }
-.list-item{
+
+.list-item {
     cursor: pointer;
+    background-color: white;
+    margin: 4px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    font-size: 12px;
+}
+
+#search-container {
+    border: 1px solid gray;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#search {
+    border: none;
+}
+
+#search-items {
+    display: none;
 }
